--- a/hcole-server.cabal
+++ b/hcole-server.cabal
@@ -22,6 +22,7 @@ Executable coleserver
     base >= 4 && < 5,
     bytestring >= 0.9.1 && < 0.10,
     directory,
+    filepath >= 1.2.0.0,
     heist >= 0.5 && < 0.6,
     json >= 0.4.4,
     MonadCatchIO-transformers >= 0.2.1 && < 0.3,
@@ -29,10 +30,12 @@ Executable coleserver
     snap == 0.5.*,
     snap-core == 0.5.*,
     snap-server == 0.5.*,
+    tar >= 0.3.1.0,
     text >= 0.11 && < 0.12,
     time >= 1.1 && < 1.3,
     transformers >= 0.2.2.0,
-    xmlhtml == 0.1.*
+    xmlhtml == 0.1.*,
+    zlib >= 0.5.3.1
 
   extensions: TypeSynonymInstances MultiParamTypeClasses
 
