--- a/hcole-server.cabal
+++ b/hcole-server.cabal
@@ -19,6 +19,7 @@ Executable coleserver
   main-is: Main.hs
 
   Build-depends:
+    aeson >= 0.3.2.11,
     base >= 4 && < 5,
     bytestring >= 0.9.1 && < 0.10,
     directory,
