--- a/hcole-server.cabal
+++ b/hcole-server.cabal
@@ -1,4 +1,4 @@
-Name:                coleserver
+Name:                hcole-server
 Version:             0.1
 Synopsis:            Project Synopsis Here
 Description:         Project Description Here
@@ -22,14 +22,20 @@ Executable coleserver
     aeson >= 0.3.2.11,
     base >= 4 && < 5,
     bytestring >= 0.9.1 && < 0.10,
+    bytestring-csv >= 0.1.2,
+    convertible >= 1.0.11,
     directory,
     filepath >= 1.2.0.0,
+    HDBC >= 2.3.1,
+    HDBC-sqlite3 >=  2.3.3,
     heist >= 0.5 && < 0.6,
     json >= 0.4.4,
     MonadCatchIO-transformers >= 0.2.1 && < 0.3,
     mtl >= 2 && < 3,
     snap == 0.5.*,
     snap-core == 0.5.*,
+    snap-extension-hdbc == 0.0.*,
+    snap-extension-hdbc-sqlite3 == 0.0.*,
     snap-server == 0.5.*,
     tar >= 0.3.1.0,
     text >= 0.11 && < 0.12,
