--- a/hcole-server.cabal
+++ b/hcole-server.cabal
@@ -23,7 +23,9 @@ Executable coleserver
     base >= 4 && < 5,
     bytestring >= 0.9.1 && < 0.10,
     bytestring-csv >= 0.1.2,
+    containers >= 0.4,
     convertible >= 1.0.11,
+    ConfigFile == 1.0.6,
     directory,
     filepath >= 1.2.0.0,
     HDBC >= 2.3.1,
