--- a/hcole-server.cabal
+++ b/hcole-server.cabal
@@ -44,6 +44,7 @@ Executable coleserver
     text >= 0.11 && < 0.12,
     time >= 1.1 && < 1.3,
     transformers >= 0.2.2.0,
+    unix >= 2.4,
     xmlhtml == 0.1.*,
     zlib >= 0.5.3.1
 
